--- a/Otimização_de_rota_com_algoritmo_genéticos_em_Python.ipynb
+++ b/Otimização_de_rota_com_algoritmo_genéticos_em_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Otimização de rota com algoritmo genéticos em Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOb0f2ot8DJ8Wvj3n48cMhb",
+      "authorship_tag": "ABX9TyMaRXdDFaJYH9gxQ6hlqdOD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -848,13 +848,80 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# instalando session_info para salvar as versões das bibliotecas/funções utilizadas no notebook.\n",
+        "!pip install session_info"
       ],
       "metadata": {
-        "id": "W7OcxIJIKkfC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0DJu0rP8M2hC",
+        "outputId": "ae1c0322-3812-41a9-f237-1f004088f8c0"
       },
-      "execution_count": 19,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting session_info\n",
+            "  Downloading session_info-1.0.0.tar.gz (24 kB)\n",
+            "Collecting stdlib_list\n",
+            "  Downloading stdlib_list-0.8.0-py3-none-any.whl (63 kB)\n",
+            "\u001b[K     |████████████████████████████████| 63 kB 2.1 MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: session-info\n",
+            "  Building wheel for session-info (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for session-info: filename=session_info-1.0.0-py3-none-any.whl size=8048 sha256=b6ce875207329782f3ad60aa7dab854fc77c09f09c398839babe7f680730bb38\n",
+            "  Stored in directory: /root/.cache/pip/wheels/bd/ad/14/6a42359351a18337a8683854cfbba99dd782271f2d1767f87f\n",
+            "Successfully built session-info\n",
+            "Installing collected packages: stdlib-list, session-info\n",
+            "Successfully installed session-info-1.0.0 stdlib-list-0.8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importando a biblioteca\n",
+        "import session_info as si\n",
+        "\n",
+        "# visualizando as versões das bibliotecas e/ou funções utilizadas no notebook\n",
+        "si.show(html=False)"
+      ],
+      "metadata": {
+        "id": "W7OcxIJIKkfC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2d5c355-3b86-4a5c-f740-2f393b4037db"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-----\n",
+            "deap                1.3\n",
+            "matplotlib          3.2.2\n",
+            "numpy               1.21.6\n",
+            "seaborn             0.11.2\n",
+            "session_info        1.0.0\n",
+            "-----\n",
+            "IPython             7.9.0\n",
+            "jupyter_client      6.1.12\n",
+            "jupyter_core        4.11.1\n",
+            "notebook            5.3.1\n",
+            "-----\n",
+            "Python 3.7.13 (default, Apr 24 2022, 01:04:09) [GCC 7.5.0]\n",
+            "Linux-5.4.188+-x86_64-with-Ubuntu-18.04-bionic\n",
+            "-----\n",
+            "Session information updated at 2022-08-21 11:39\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -876,6 +943,17 @@
         "id": "Jr2Mu6DnCeXx"
       },
       "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "SnIAo1TnM92Y"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
